--- a/index.html
+++ b/index.html
@@ -531,6 +531,242 @@
 							</div>
 						</div>
 					</div>
+					<div class="team-worker">
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-4.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-5.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-6.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-7.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-8.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-9.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-10.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-11.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-12.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-13.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-14.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-15.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-16.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-17.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-18.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-19.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-20.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+						<div class="team-worker__item">
+							<img
+								src="img/team/team-image-21.jpg"
+								alt="Photo"
+								class="team-worker__image"
+							/>
+							<div class="team-worker__info">
+								<span class="team-worker__name">Имя сотрудника</span>
+								<span class="team-worker__profession"
+									>Профессия сотрудника</span
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<footer class="footer">
