--- a/index.html
+++ b/index.html
@@ -539,10 +539,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -552,10 +550,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -565,10 +561,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -578,10 +572,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -591,10 +583,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -604,10 +594,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -617,10 +605,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -630,10 +616,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -643,10 +627,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -656,10 +638,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -669,10 +649,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -682,10 +660,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -695,10 +671,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -708,10 +682,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -721,10 +693,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -734,10 +704,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -747,10 +715,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 						<div class="team-worker__item">
@@ -760,10 +726,8 @@
 								class="team-worker__image"
 							/>
 							<div class="team-worker__info">
-								<span class="team-worker__name">Имя сотрудника</span>
-								<span class="team-worker__profession"
-									>Профессия сотрудника</span
-								>
+								<span class="team-worker__name">Name</span>
+								<span class="team-worker__profession">Profession</span>
 							</div>
 						</div>
 					</div>
